@@ -22,6 +22,7 @@
 - fix disable timeout.
 - fix strdup() return value check (Leonardo Chiquitto).
 - fix parse_sun() module init.
+- dont check null cache on expire.
 
 03/09/2009 autofs-5.0.5
 -----------------------
